terraform-security-group/security-group.tf

resource "aws_security_group" "my-sg" {
    name="allowing ssh"

    description="allowing ssh inbound traffic from 22"

    ingress{

        from_port=22
        to_port=22
        protocol="tcp"
        cidr_blocks=["0.0.0.0/0"]
    }

    ingress{

        from_port=80
        to_port=80
        protocol="tcp"
        cidr_blocks=["0.0.0.0/0"]

    }
    egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
}
